<resources>
    <string name="app_name">ShowTech</string>
    <string name="computer">Computer</string>
    <string name="mobile">Mobile</string>
    <string name="music">Music</string>
    <string name="camera">Camera</string>
    <string name="Gaming">Gaming</string>
    <string name="Top_Picks">Top Picks</string>
    <string name="categories">Select a Category</string>
    <string name="back">Back</string>
    <string name="item_images">Item Images</string>
    <string name="item_image">Item Image</string>
    <string name="list_of_items">List of items</string>
    <string name="place_holder">PLACE HOLDER</string>
    <string name="MainActivity">MainActivity</string>
    <string name="search">Search</string>
    <string name="description_title">Description/Specifications:</string>
    <string name="suggestions">- Make sure that all words are spelled correctly.\n- Try different keywords.\n- Try more general keywords.\n- Try fewer keywords.</string>
</resources>
