<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Dark"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/MainActivity"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:background="@color/White"
            android:contentDescription="@string/app_name"
            android:padding="10dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/showtech_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/Top_Picks"
                android:textColor="#E0E0E0"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <ImageView
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/search"
                android:onClick="search"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:srcCompat="@android:drawable/ic_menu_search" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/top_selling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="5dp"
            android:background="@color/DarkGrey"
            android:contentDescription="@string/Top_Picks"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp"
            android:scrollbars="horizontal"
            tools:itemCount="5"
            tools:layoutManager="LinearLayoutManager"
            tools:listitem="@layout/top_selling_items"
            tools:spanCount="5">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/categories"
            android:textColor="#E0E0E0"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="5dp"
            android:background="@color/Grey"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:id="@+id/computer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:background="@color/DarkGrey"
                android:clickable="true"
                android:contentDescription="@string/computer"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="selectCategory"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/computer"
                    android:padding="10dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/computer" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:text="@string/computer"
                    android:textColor="#E0E0E0"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:background="@color/DarkGrey"
                android:clickable="true"
                android:contentDescription="@string/mobile"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="selectCategory"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/mobile"
                    android:padding="10dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/android" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/mobile"
                    android:textColor="#E0E0E0"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/music"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:background="@color/DarkGrey"
                android:clickable="true"
                android:contentDescription="@string/music"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="selectCategory"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/music"
                    android:padding="10dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/music_items" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/music"
                    android:textColor="#E0E0E0"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/camera"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:background="@color/DarkGrey"
                android:clickable="true"
                android:contentDescription="@string/camera"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="selectCategory"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/camera"
                    android:padding="10dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/camera" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/camera"
                    android:textColor="#E0E0E0"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/gaming"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:background="@color/DarkGrey"
                android:clickable="true"
                android:contentDescription="@string/Gaming"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="selectCategory"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/Gaming"
                    android:padding="10dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/game" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/Gaming"
                    android:textColor="#E0E0E0"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>